tests/fixtures/valid/run_number_bases.lby
fn main -> i64
    return 0xFF + 0b1010 + 0o17
