tests/fixtures/invalid/modules_duplicate/helper.lby
pub fn shared n i64 -> i64
    n + 1
